samples/_failures_safe/1761439007_e209d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e126fc42.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_e126fc42.c:142:16: error: expected expression at end of input
  142 |                analyzer->words[i].count,
      |                ^~~~~~~~
./samples/SAFE/__tmp_e126fc42.c:142:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e126fc42.c:142:16: error: expected declaration or statement at end of input
